# InFlow

./: .gitignore  AGENTS.md  README.md  README_CN.md  chat-overlay-impl-checklist.md  tauri-react-capabilities-tech-proposal.md
tauri-app/: .env  README.md  chat-session.json  package-lock.json  package.json  prompts.md  tailwind.config.js
tauri-app/.opencode/skills/agent-browser/: SKILL.md
tauri-app/docs/: IMPLEMENTATION_PLAN.md  SPEC.md
tauri-app/src/: App.css  App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  overlay.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: capability_catalog.rs  config.rs  deeplink.rs  genai_client.rs  lib.rs  mcp.rs  share_server.rs  state.rs  types.rs  windowing.rs
tauri-app/src-tauri/src/commands/: action_predict.rs  app.rs  capability.rs  chat.rs  markdown.rs  misc.rs  mod.rs  share.rs  translate.rs
tauri-app/src-tauri/src/llm_tools/: mod.rs
tauri-app/src-tauri/src/llm_tools/builtin/: agent_browser.rs  fs.rs  mod.rs  python.rs  time.rs  webfetch.rs
tauri-app/src/app/: bootstrap.ts
tauri-app/src/components/blocks/: CodeBlock.tsx  ContentBlocks.tsx  MarkdownBlock.tsx  RichMarkdown.tsx
tauri-app/src/components/markdown/: MarkdownStatusBar.tsx  MarkdownTabBar.tsx  MarkdownToolbar.tsx  VditorEditor.tsx
tauri-app/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
tauri-app/src/core/capabilities/: definitions.ts  types.ts
tauri-app/src/stores/: chatStore.ts  invocationStore.ts  markdownStore.ts
(+17 files in other folders)
